# tersetrim

./: LICENSE  README.md  pyproject.toml  tersetrim.py
