[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tersetrim"
version = "0.3.1"
description = "Token-optimizing command wrapper for AI coding agents — compacts CLI output, argv-safe, no junk files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "ai-agent", "cli", "tokens", "claude-code", "developer-tools",
            "aider", "codex", "cline", "context-window", "token-optimization"]
authors = [{ name = "Terse Labs" }]
dependencies = []                      # stdlib-only by design (ponytail: no deps for what argv+re do)
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.scripts]
tersetrim = "tersetrim:main"

[project.urls]
Homepage = "https://github.com/terse-labs/tersetrim"
Repository = "https://github.com/terse-labs/tersetrim"
Issues = "https://github.com/terse-labs/tersetrim/issues"

[tool.setuptools]
py-modules = ["tersetrim"]
